--- a/templates/consult_tool.html
+++ b/templates/consult_tool.html
@@ -8,6 +8,7 @@
   <body>
     <h1>Detalhes da Ferramenta</h1>
 
+    <p>ID: {{ ferramenta.id }}</p>
     <p>Tipo: {{ ferramenta.tipo }}</p>
     <p>Fabricante: {{ ferramenta.fabricante }}</p>
     <p>Data Aquisição: {{ ferramenta.data_aquisicao }}</p>
