--- a/static/style.css
+++ b/static/style.css
@@ -63,3 +63,12 @@ a:hover {
   text-decoration: underline;
   color: #1e70bf;
 }
+
+#addToolContainer {
+  display: none; /* Oculta o contêiner inicialmente */
+  margin-top: 10px;
+}
+
+#btn-salvar {
+  background-color: red;
+}
