--- a/templates/consult_tool.html
+++ b/templates/consult_tool.html
@@ -1,21 +1,38 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('static', filename='style.css') }}"
+    />
     <title>Consultar Ferramenta</title>
   </head>
-  <body>
-    <h1>Detalhes da Ferramenta</h1>
+  <body class="container text-center">
 
-    <p>ID: {{ ferramenta.id }}</p>
-    <p>Tipo: {{ ferramenta.tipo }}</p>
-    <p>Fabricante: {{ ferramenta.fabricante }}</p>
-    <p>Data Aquisição: {{ ferramenta.data_aquisicao }}</p>
-    <p>Data Última Calibração: {{ ferramenta.data_ultima_calibracao }}</p>
-    <p>Data Próxima Calibração: {{ ferramenta.data_proxima_calibracao }}</p>
-    <p>Garantia: {{ ferramenta.garantia }}</p>
+  
 
-    <a href="{{ url_for('index') }}">Voltar</a>
+    <div class="card" style="width: 20rem;">
+      <div class="card-body">
+        <h5 class="card-title">ID: {{ ferramenta.id }}</h5>
+        <h6 class="card-subtitle mb-2 text-muted">Tipo: {{ ferramenta.tipo }}</h6>
+        <p class="card-text">Fabricante: {{ ferramenta.fabricante }}</p>
+        <p class="card-text">Data Aquisição: {{ ferramenta.data_aquisicao }}</p>
+        <p class="card-text">Data Última Calibração: {{ ferramenta.data_ultima_calibracao }}</p>
+        <p class="card-text">Data Próxima Calibração: {{ ferramenta.data_proxima_calibracao }}</p>
+        <p class="card-text">Garantia: {{ ferramenta.garantia }}</p>
+        <a href="{{ url_for('index') }}" class="card-link">Voltar</a>
+      </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   </body>
 </html>
